cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
project(plant_leaf_disease_classify)
set(TVM_ROOT $ENV{TVM_HOME})
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${TVM_ROOT}/include)
include_directories(${TVM_ROOT}/3rdparty/dlpack/include)
include_directories(${TVM_ROOT}/3rdparty/dmlc-core/include)
include_directories(${TVM_ROOT}/3rdparty/compiler-rt)
set(TVM_RUNTIME_LIB ${TVM_ROOT}/build_runtime/libtvm_runtime.so)
set(SRC plant_leaf_disease_classify.cpp MeraDrpRuntimeWrapper.cpp PreRuntime.cpp)
set(EXE_NAME plant_leaf_disease_classify)
add_executable(${EXE_NAME} ${SRC})
target_include_directories(${EXE_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${EXE_NAME} ${OpenCV_LIBS})
target_link_libraries(${EXE_NAME} ${TVM_RUNTIME_LIB})
