cmake_minimum_required(VERSION 3.10)
project(tutorial_app_cpp)
set(TVM_ROOT $ENV{TVM_HOME})
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${TVM_ROOT}/include)
include_directories(${TVM_ROOT}/3rdparty/dlpack/include)
include_directories(${TVM_ROOT}/3rdparty/dmlc-core/include)
include_directories(${TVM_ROOT}/3rdparty/compiler-rt)
set(TVM_RUNTIME_LIB ${TVM_ROOT}/build_runtime/libtvm_runtime.so)
set(SRC parkinglot_detection.cpp MeraDrpRuntimeWrapper.cpp)
set(EXE_NAME parkinglot_detection)
add_executable(${EXE_NAME} ${SRC})
target_include_directories(${EXE_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${EXE_NAME} ${OpenCV_LIBS})
target_link_libraries(${EXE_NAME} ${TVM_RUNTIME_LIB} -pthread) 
